--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Adam Chambers",
   "license": "ISC",
   "dependencies": {
+    "@emotion/core": "~10.0.10",
+    "@emotion/styled": "~10.0.11",
     "@zeit/next-css": "~1.0.1",
     "diff2html": "~2.9.0",
     "isomorphic-unfetch": "~3.0.0",
