--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/fontawesome-free": "~5.8.2",
     "@zeit/next-css": "~1.0.1",
     "diff2html": "~2.9.0",
+    "firebase": "~6.0.2",
     "isomorphic-unfetch": "~3.0.0",
     "next": "~8.1.0",
     "react": "~16.8.6",
